@@ -578,7 +578,7 @@ $uri = URI->new(
     $ENV{SNOWSQL_URI} ||
     'db:snowflake://accountname/?Driver=Snowflake'
 );
-$uri->host($uri->host . ".snowflakecomputing.com") if $uri->host !~ /snoflakecomputing[.]com/;
+$uri->host($uri->host . ".snowflakecomputing.com") if $uri->host !~ /snowflakecomputing[.]com/;
 my $err = try {
     $snow->use_driver;
     $dbh = DBI->connect($uri->dbi_dsn, $uri->user, $uri->password, {
