@@ -4,6 +4,8 @@ Revision history for Perl extension App::Sqitch
      - Fixed a bug introduced in v1.5.0 where the MySQL engine connected to
        the target database instead of the registry database. Thanks to
        @tiberiusferreira for the report (#862)!
+     - Fixed test failures with some Exasol and Firebird configurations.
+       Thanks to Slaven Rezić for the report (#858)!
 
 1.5.0  2025-01-08T03:22:40
      - Fix improperly nested Pod headers that were incrementing two levels
